# blue-horizon

./: .prettierignore  .tool-versions  LICENSE  README.md  eslint.config.js  package.json  vite.config.ts
.github/workflows/: ci.yml
src/: App.tsx  constants.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_offline_foundation.sql
src-tauri/src/: db.rs  error.rs  lib.rs  main.rs  media.rs  session.rs  session_store.rs
src-tauri/src/commands/: actions.rs  auth.rs  chat.rs  feeds.rs  lists.rs  media.rs  mod.rs  notifications.rs  search.rs  system.rs  timeline.rs  window.rs
src/components/chat/: ChatList.tsx  ChatMessage.tsx  ChatWindow.tsx
src/components/feed/: CustomFeedCard.tsx  FeedSkeleton.tsx
src/components/icons/: ArrowLeftIcon.tsx  HeartIcon.tsx  ReplyIcon.tsx  RepostIcon.tsx  ShareIcon.tsx
src/components/layout/: BottomNav.tsx  Sidebar.tsx  Titlebar.tsx
src/components/list/: AddToListModal.tsx  (+4 more)
src/contexts/: RefreshContext.tsx  RefreshContextValue.ts  useRefresh.ts
src/hooks/: useBluesky.ts  useChatUnread.ts  usePlatform.ts  usePostActions.ts  useSearch.ts  useTheme.ts
src/lib/: api.ts  auth.ts  chat.ts  feeds.ts  mappers.ts  notifications.ts  search.ts  utils.ts  window.ts
src/pages/: ChatPage.tsx  FeedDetailsPage.tsx  FeedsPage.tsx  HomePage.tsx  ListDetailPage.tsx  ListsPage.tsx  NotificationsPage.tsx  PostThreadPage.tsx  ProfilePage.tsx  SearchPage.tsx  SettingsPage.tsx  WelcomePage.tsx
src/stores/: authStore.ts  toastStore.ts  uiStore.ts
src/types/: bluesky.ts
(+23 files in other folders)
